# meeting

./: .gitignore  pyproject.toml
src/meeting/: __init__.py  main.py  main2.py
