[project]
name = "meeting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "RajinderSingh", email = "rajinder.singh@zooplus.com" }
]
requires-python = ">=3.11"
dependencies = [
    "selenium>=4.38.0",
]

[project.scripts]
meeting = "meeting:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
